# Tic-Tac-Toe

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  textualize_app.py
src/tic_tac_toe/: __main__.py  model.py
src/tic_tac_toe/qt_interface/: game_over_screen.py  game_screen.py  game_settings_screen.py  main_win.py  model.py  run_ui.py  test_launch.py  title_screen.py
textual_interface/: __init__.py  communication_interface.py  game_over_screen.py  game_screen.py  player_select_screen.py  run_game.py  test_land.py  title_screen.py  view.py  view_model.py
textual_interface/css/: game_over.css  game_screen.css  main.css  play_select.css  title.css
