[metadata]
name = tic-tac-toe
version = attr: tic_tac_toe.VERSION
author = Ryan McConnell & Chelsea Leonhardt
description = Tic Tak Toe
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    Pyside6-Essentials
    PySide6-Addons
    PySide6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
tic_tac_toe.qt_interface = resources/**
